name: logging-effect
version: 1.3.6
synopsis: A mtl-style monad transformer for general purpose & compositional logging
homepage: https://github.com/ocharles/logging-effect
license: BSD3
license-file: LICENSE
author: Ollie Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md

library
  exposed-modules:     Control.Monad.Log
  other-extensions:    ViewPatterns, OverloadedStrings, GeneralizedNewtypeDeriving, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, FunctionalDependencies, PatternSynonyms
  build-depends:       base >=4.8 && <4.14
                     , async >=2.0 && <2.3
                     , transformers >=0.4 && <0.6
                     , text >=1.2 && <1.3
                     , time >=1.5 && <1.10
                     , mtl >= 2.2.1 && <2.3
                     , exceptions >= 0.8.0.2 && <0.11
                     , free >= 4.12.1 && < 5.2
                     , stm >= 2.4.4.1 && < 2.6
                     , stm-delay >= 0.1.1.1 && < 0.2
                     , prettyprinter >= 1.2 && < 1.4
                     , monad-control >= 1.0.0.4 && < 1.1
                     , transformers-base >= 0.4.4 && < 0.5
                     , semigroups >= 0.16.2.2 && < 0.20
                     , unliftio-core >= 0.1.1.0 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -Wall

Benchmark benchmark-logging-effect
  type: exitcode-stdio-1.0
  main-is: Benchmark.hs
  build-depends: base, logging-effect, criterion, monad-logger, fast-logger, text, bytestring, prettyprinter, lifted-async, time
  ghc-options: -O2
  default-language:    Haskell2010
